# mond

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: main.yml
docs/: docspdf.html  howto.html  index.html  index.md
docs/howto/: index.html
docs/source/: How-to.rst  Install-and-Compile.rst  conf.py  index.rst  libbus.rst  license.rst
mondc/: .gitignore  CMakeLists.txt  llist.h  mondc.c  mondpre.c  mondpre.h  mondutil.h  standard.h  test.txt
mondc/cmake/debug/src/: mondc
mondc/cmake/debug/src/mondc.dSYM/Contents/: Info.plist
mondc/cmake/debug/src/mondc.dSYM/Contents/Resources/DWARF/: mondc
mondc/cmake/debug/try/: tryer
mondc/cmake/debug/try/binpath/: tryer
mondc/cmake/debug/try/tryer.dSYM/Contents/: Info.plist
mondc/cmake/debug/try/tryer.dSYM/Contents/Resources/DWARF/: tryer
mondc/cmake/release/src/: mondc
mondc/cmake/release/try/: tryer
mondc/cmake/test/: tester
mondc/cmake/try/: tryer
mondc/examples/: example.mon  included.mon  included2.mon
mondc/mondlibs/: standard.mon  std.mon
mondc/src/: CMakeLists.txt  llist.h  macrogen.h  mondc.c  mondc.h  mondpre.c  mondpre.h  mondutil.h  standard.h
mondc/src/util/: astring.h  llist.h  logger.h  mondutil.h
mondc/test/: CMakeLists.txt  test.c
mondc/tools/: generatestandard.py  install.py  standard.mon
mondc/try/: CMakeLists.txt  try.c
notes/: idea_final.txt  language.md  mondpre.txt
notes/old notes/: compiler.md  fast.md  idea_1.txt  idea_2.txt  interpreter.md
search/: search_index.json
site/: 404.html  index.html
(+64 files in other folders)
